# TerraBox_Widgets

./: .Terrabox arduino widget1.pptx.icloud  .cproject  .project  Area.cpp  BarWidget.cpp  BarWidget.h  BufferUInt.cpp  ButtonWidget.cpp  ButtonWidget.h  CMakeLists.txt  Calibrator.cpp  Calibrator.h  Dump.cpp  Dump.h  EventSource.cpp  LabelWidget.cpp  LabelWidget.h  LevelIndicatorWidget.cpp  LevelIndicatorWidget.h  Levels.cpp  Persistence.cpp  Persistence.h  README.md  RectangleWidget.cpp  RectangleWidget.h  ScreenHandler.cpp  Splash.cpp  Template.cpp  TerraBox_Widgets.h  Terrabox arduino widget1.pptx  TouchEvent.cpp  TouchEventLink.cpp  TouchHandler.cpp  ValueConverter.cpp  ValueConverter.h  Widget.cpp  _Template.cpp  getTouchData.cpp  library.properties
Examples/TerraBox_RawTouchTest/: TerraBox_RawTouchTest.ino
Examples/Terrabox_EEPROM_Analyzer/: Terrabox_EEPROM_Analyzer.ino
Examples/Terrabox_HelloButton/: Terrabox_HelloButton.ino
